--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* Custom scrollbar for a more polished look */
 ::-webkit-scrollbar {
   width: 8px;
